# openwhisper

./: README.md  package.json  shell.nix
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  config.rs  fft.rs
app/src/routes/: +page.svelte
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  commands.rs  config.rs  fft.rs  lib.rs  main.rs  state.rs  transcription.rs
src/lib/components/: FormField.svelte  IconButton.svelte
src/routes/: +page.svelte
src/routes/record/: +page.svelte
src/routes/settings/: +page.svelte
