[package]
name = "openwhisper"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openwhisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
whisper-rs = "0.15.0"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
hound = "3.5.1"
cpal = "0.16.0"
chrono = "0.4.41"
rubato = "0.16.2"
dasp = "0.11.0"
toml = "0.9.5"
dirs = "6.0.0"
rustfft = "6.2"
iter_num_tools = "0.6"
reqwest = "0.12.23"
ringbuf = "0.4.8"
tauri-plugin-log = "2"
log = "0.4.27"
